# demo-textlint-with-sphinx

./: .textlintrc.json  Taskfile.yaml  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: main.yaml
source/: conf.py  index.rst
