[project]
name = "demo-textlint-with-sphinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.1.3",
]

[tool.uv]
dev-dependencies = [
    "docutils-ast-writer>=2023.1.0",
    "esbonio>=0.16.5",
    "ruff>=0.8.0",
]

[tool.uv.sources]
docutils-ast-writer = { url = "https://github.com/attakei-sandbox/docutils-ast-writer/archive/refs/heads/dev.zip" }
